<resources>
    <string name="app_name">Custom reminder maker</string>
    <string name="enter_reminder_name">Enter reminder name</string>
    <string name="enter_reminder_message">Enter reminder message</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="remind_me_in">Remind me in:</string>

    <string-array name="repeat_interval_array">
        <item>1 minute</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
</resources>
